Extract common logic for all dataflow analysis tests and playgrounds (#186)